<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
  -->

<resources>

	<string name="app_name">Treebolic Files Services</string>
	<string name="files">Files</string>

	<!-- title -->
	<string name="title_run">Run</string>
	<string name="title_source">Source</string>
	<string name="title_places">Places</string>
	<string name="title_demo">Demo</string>
	<string name="title_finish">Finish</string>
	<string name="title_kill">Kill</string>
	<string name="title_settings">Settings</string>
	<string name="title_settings_service">Settings for service</string>
	<string name="title_activity_app_settings">Application</string>
	<string name="title_choose">Choose</string>
	<string name="title_choose_directory">Choose directory</string>

	<!-- actions -->
	<string name="action_ok">OK</string>
	<string name="action_cancel">Cancel</string>

	<!-- errors -->
	<string name="status_fail">Fail</string>
	<string name="fail_nullquery">Null query</string>
	<string name="fail_nullclient">Null client</string>

	<!-- services -->
	<string name="service_broadcast_service">Treebolic Files Broadcast Service</string>
	<string name="service_aidl_bound_service">Treebolic Files AIDL-based Bound Service</string>
	<string name="service_messenger_bound_service">Treebolic Files Messenger Bound Service</string>

	<!-- service descriptions -->
	<string name="description_service_broadcast_service">Produces Treebolic model from file system data as a Broadcast Service</string>
	<string name="description_service_aidl_bound_service">Produces Treebolic model from file system data as an AIDL-based Bound Service</string>
	<string name="description_service_messenger_bound_service">Produces Treebolic model from filesystem data as a Messenger Bound Service</string>

</resources>